# xdyna

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
examples/: study_without_files.py
examples/example_job_submission/: Step3__calculate_DA.py
tests/: test_ee.py
xdyna/: __init__.py  da.py  da_meta.py  job_management.py  loading_management.py  plot.py  postprocess_tools.py  run_da.py  sixtrack_jobs.py
